--- a/frontend/src/styles/util/_variables.scss
+++ b/frontend/src/styles/util/_variables.scss
@@ -14,3 +14,15 @@ $breakpoints: (
   "xxlarge": 1440px,
   "widescreen": 1440px
 ) !default;
+
+$neora-blue: #008295;
+$primary: $neora-blue;
+$secondary:  rgb(52, 55, 65);
+
+$white: white;
+$utility-header: $secondary;
+$header: $white;
+
+$primary-copy: rgb(52, 53, 55);
+
+$stars: $neora-blue;
